ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2013-05-27 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.5.2
	* Changed the metrics names in the 'DATA.csv' file. Now the raw
	clustering metrics are preceeded by 'd_', the normalized clustering
	metrics are preceeded by 'n_' and the extrapolation/averaged metrics
	are preceeded by 'x_'.

	* In the 'clusters_info.csv' file, noise cluster is always present
	including when it does not contain any individual.
	

2013-05-08 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.5.1
	* Solved a bug in the states parsing that provoke an initial event
	outside a burst to be wrongly accounted into the next running burst

2013-05-06 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.5.0
	* Changed Boost version checker to search for version >= 1.43

	* Added new event based parsing using the parameter '-ec <event_type>'.
	This parsing defines as a region any portion of the application 
	surrounded by the events with types indicated (as opposite to '-e'
	where it is required to check the event type and event value)

2013-04-16 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.4.1
	* Solved a bug in the Aggregative Refinement that produced a
	crash when a cluster appeared aligned just with sequence gaps

	* Compilation not tested in IA64/PPC/PPC64

2013-04-10 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.4.0
	* XML now can uses event labels instead of event values to define
	the clustering parameters

	* Added attribute "all_counters" to 'extrapolation_parameters'. If
	set to yes, the application generates all extrapolation parameters
	based on the hardware counters present on trace

	* These two features requires the existence of a PCF file with
	the same prefix of the input trace to translate the event labels